Fixed the styling overlap for footer links and button links

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -160,7 +160,7 @@ form {
 .card-footer {
     font-size: .8rem;
     
-    a { 
+    a.footer-link { 
         color: #fc6e10;
         margin-left: .5em;
         
